replace baliapur with dhanbad

--- a/Index1.html
+++ b/Index1.html
@@ -179,7 +179,7 @@
     </header>
 
     <div class="container">
-        <h1> Join Best GYM Of Baliapur Now </h1>
+        <h1> Join Best GYM Of Dhanbad </h1>
         <form action="no action.php">
             <div class="form-group">
                 <input type="text" name="" Placeholder="Please Enter Your Name">
